added main in replace.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(COMP348_Search_and_Replace C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(a.out main.c traversal.c traversal.h text.c text.h report.c report.h replace.c replace.h)
+add_executable(a.out replace.c replace.h traversal.c traversal.h text.c text.h report.c report.h)
